# galilel-bot

./: Makefile.am  README.md  autogen.sh  configure.ac
conf/: Makefile.am  galilel-bot.conf  galilel-bot.conf.example
src/: Makefile.am  galilel-bot.bash
