# The top-level input Makefile for galilel-bot

# minimum required automake 1.6
AUTOMAKE_OPTIONS = 1.6

# Any directories which should be built and installed.
SUBDIRS = conf src

# The directories which are part of the distribution.
DIST_SUBDIRS = $(SUBDIRS)

EXTRA_DIST =		\
	AUTHORS		\
	INSTALL		\
	LICENSE		\
	NEWS		\
	README.md
